# ChangeLog for games-fps/quake3-defrag
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-defrag/ChangeLog,v 1.5 2006/10/23 21:50:31 wolf31o2 Exp $

*quake3-defrag-1.91.08-r1 (23 Oct 2006)

  23 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +quake3-defrag-1.91.08-r1.ebuild:
  Added new revision for testing which uses the brand-spankin-new
  games-mods.eclass to reduce ebuild code.

*quake3-defrag-1.91.08 (31 Mar 2006)

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -quake3-defrag-1.9.ebuild, -quake3-defrag-1.91.ebuild,
  +quake3-defrag-1.91.08.ebuild:
  Version bump to 1.91.08 and closing bug #121303. Thanks to Sascha
  Geschwandtner <s.geschwandtner@gmx.de> for the ebuild.

*quake3-defrag-1.91 (27 Dec 2004)

  27 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  +quake3-defrag-1.91.ebuild:
  Version bump #53579 by Jan Brinkmann.

*quake3-defrag-1.9 (30 Nov 2003)

  30 Nov 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Simon Hastie <zyklon@gmx.net> #33885.