@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-defrag/quake3-defrag-1.91.08-r1.ebuild,v 1.1 2006/10/23 21:50:31 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-defrag/quake3-defrag-1.91.08-r1.ebuild,v 1.2 2006/10/23 21:54:32 wolf31o2 Exp $
 
 MOD_DESC="Trickjumping challenges for Quake III"
 MOD_NAME="Defrag"
@@ -23,6 +23,14 @@ SRC_URI="http://cgg0.free.fr/defrag/defrag_${PV}.zip
 	http://www.german-defrag.de/files/defrag/df-extras002.zip"
 
 LICENSE="freedist"
+
+KEYWORDS="-* ~amd64 ~ppc ~x86"
+
+RDEPEND="ppc? ( games-fps/${GAME} )
+	!ppc? (
+		|| (
+			games-fps/${GAME}
+			games-fps/${GAME}-bin ) )"
 
 src_unpack() {
 	unpack defrag_${PV}.zip
