@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/quake3-defrag
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-defrag/ChangeLog,v 1.5 2006/10/23 21:50:31 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3-defrag/ChangeLog,v 1.6 2006/10/23 21:54:32 wolf31o2 Exp $
+
+  23 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  quake3-defrag-1.91.08-r1.ebuild:
+  Added KEYWORDS and RDEPEND so it'll work on PPC.
 
 *quake3-defrag-1.91.08-r1 (23 Oct 2006)
 
